# issuerizer

./: .env.example  AGENTS.md  README.md  action.yml  example.py  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: resummarize_parent.yml
src/issuerizer/: github.py  llm.py  main.py
