[project]
name = "issuerizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pdit",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
    "anthropic>=0.45.0",
]

[project.scripts]
issuerizer = "issuerizer.main:app"

[tool.uv.sources]
pdit = { git = "https://github.com/vangberg/pdit", rev = "dist" }
